--- a/MaJiangLib/MaJiangLib/MaJiangLib.csproj
+++ b/MaJiangLib/MaJiangLib/MaJiangLib.csproj
@@ -12,7 +12,7 @@
 
     <ItemGroup>
       <Reference Include="LiteNetLib">
-        <HintPath>..\..\LiteNetLib\bin\Debug\net8.0\LiteNetLib.dll</HintPath>
+        <HintPath>..\..\LiteNetLib\LiteNetLib\bin\release\net8.0\LiteNetLib.dll</HintPath>
       </Reference>
     </ItemGroup>
 
