玩家操作判断初步实现/文件生成重构
当前会对玩家手牌进行判断,计算出玩家可以用什么操作响应哪些牌,目前Lib的生成转移至Unity中

--- a/MaJIangNet/MaJIangNet/MaJIangNet.csproj
+++ b/MaJIangNet/MaJIangNet/MaJIangNet.csproj
@@ -9,10 +9,10 @@
 
     <ItemGroup>
       <Reference Include="LiteNetLib">
-        <HintPath>..\..\LiteNetLib\LiteNetLib\bin\Release\net8.0\LiteNetLib.dll</HintPath>
+        <HintPath>..\..\MaJiangUnity\Assets\Plugins\LiteNetLib.dll</HintPath>
       </Reference>
       <Reference Include="MaJiangLib">
-        <HintPath>..\..\MaJiangLib\MaJiangLib\bin\Debug\netstandard2.1\MaJiangLib.dll</HintPath>
+        <HintPath>..\..\MaJiangUnity\Assets\Plugins\MaJiangLib.dll</HintPath>
       </Reference>
     </ItemGroup>
 
