对局信息实现/端交互初步规划/包处理
暂且规划对局信息类型和包处理,目前规定单巡阶段的基准是客户端和服务端之间的信息交互,两端根据交互推动阶段

--- a/MaJiangUnity/Assembly-CSharp.csproj
+++ b/MaJiangUnity/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Interfaces\IMatchInformaiton.cs" />
     <Compile Include="Assets\Scripts\Back-end Scripts\QiPaiDui.cs" />
+    <Compile Include="Assets\Scripts\Back-end Scripts\MainMatchControl.cs" />
     <Compile Include="Assets\Scripts\Back-end Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\Back-end Scripts\Group.cs" />
     <Compile Include="Assets\Scripts\Network Scripts\Client.cs" />
@@ -67,12 +68,13 @@
     <Compile Include="Assets\Scripts\Back-end Scripts\Pai.cs" />
     <Compile Include="Assets\Scripts\Back-end Scripts\UserProfile.cs" />
     <Compile Include="Assets\Scripts\Back-end Scripts\ShouPai.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\IPlayerInformation.cs" />
     <Compile Include="Assets\Scripts\Back-end Scripts\FanCalculator.cs" />
     <Compile Include="Assets\Scripts\Back-end Scripts\GlobalFunction.cs" />
     <Compile Include="Assets\Scripts\Network Scripts\PackCoder.cs" />
     <Compile Include="Assets\Scripts\Network Scripts\Server.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IPlayerAction.cs" />
-    <Compile Include="Assets\Scripts\Back-end Scripts\PlayerAction.cs" />
+    <Compile Include="Assets\Scripts\Back-end Scripts\PlayerActionData.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
